@@ -2133,11 +2133,10 @@ public class Block {
 			isSolid = true;
 		}
 	};
-	public static final Block UNKNOWN0x99 = new Block(0x99, "Unknown Block 0x99", Texture.unknown) {
+	public static final Block NETHERQUARTZORE = new Block(0x99, "Nether Quartz Ore", Texture.netherQuartzOre) {
 		{
 			isOpaque = false;
 			isSolid = false;
-			isInvisible = true;
 		}
 	};
 	public static final Block UNKNOWN0x9A = new Block(0x9A, "Unknown Block 0x9A", Texture.unknown) {
@@ -2906,7 +2905,7 @@ public class Block {
 		FLOWERPOT, CARROTS, POTATOES, WOODENBUTTON,
 		HEAD, ANVIL, UNKNOWN0x92, UNKNOWN0x93,
 		UNKNOWN0x94, UNKNOWN0x95, UNKNOWN0x96, UNKNOWN0x97,
-		REDSTONEBLOCK, UNKNOWN0x99, UNKNOWN0x9A, UNKNOWN0x9B,
+		REDSTONEBLOCK, NETHERQUARTZORE, UNKNOWN0x9A, UNKNOWN0x9B,
 		UNKNOWN0x9C, UNKNOWN0x9D, DROPPER, UNKNOWN0x9F,
 		UNKNOWN0xA0, UNKNOWN0xA1, UNKNOWN0xA2, UNKNOWN0xA3,
 		UNKNOWN0xA4, UNKNOWN0xA5, UNKNOWN0xA6, UNKNOWN0xA7,
